# OutDated

./: README.md  developmentBlueprint.md  hiiammouli.txt  package-lock.json  package.json  tailwind.config.ts
MarketPlace/: middleware.ts  package-lock.json  package.json  tailwind.config.js
MarketPlace/app/: ClientLayout.tsx  error.tsx  globals.css  layout.tsx  page.tsx
MarketPlace/app/[id]/: page.tsx
MarketPlace/app/developer/: page.tsx
MarketPlace/app/provider/: page.tsx
MarketPlace/components/: WalletProvider.tsx  connect-button.tsx  file-upload.tsx  footer.tsx  navbar.tsx  nft-card.tsx  theme-toggle.tsx
MarketPlace/lib/: mock-data.ts  types.ts  utils.ts
MarketPlace/providers/: mock-wallet-provider.tsx  theme-provider.tsx  wallet-provider.tsx
app/: globals.css  layout.tsx  page.tsx
app/whitepaper/: page.tsx
components/: code-snippet.tsx  custom-cursor.tsx  feature-cards.tsx  features.tsx  floating-navbar-outdated.tsx  footer.tsx  hero-canvas.tsx  hero.tsx  interactive-demo.tsx  navigation.tsx  parallax-provider.tsx  trust-bar.tsx  trust-verification.tsx  whitepaper-content.tsx  whitepaper-section.tsx
components/ui/: border-magic-button.tsx  coming-soon-badge.tsx  floating-navbar.tsx  glowing-effect.tsx  google-gemini-effect.tsx  input.tsx  sparkles.tsx  tailwindcss-buttons.tsx
mlTrainingServer/: .gitignore  README.md  main.py  pyproject.toml  setup.py
mlTrainingServer/models/: 87020302-965e-4ebb-8aa0-e2a808ee2e8c.joblib
mlTrainingServer/src/mltrainingserver/: __init__.py  algorithms.py  api.py  config.py  getDataset.py  models.py  training.py
(+51 files in other folders)
