[project]
name = "mltrainingserver"
version = "0.1.0"
description = "ML Training Service for OutDated Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "pydantic>=2.6.1",
    "python-jose[cryptography]>=3.3.0",
    "numpy>=1.26.4",
    "scikit-learn>=1.4.0",
    "python-multipart>=0.0.9",
    "crypto>=1.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mltrainingserver"]
